@@ -1,3 +1,10 @@
+* Apr 9 2001 hship
+
+Reorganize to allow Tutorial to be run directly from the top-level directory.
+Ship the master Makefile (used to generate the distros, and to run the Tutorial), as well
+as the Jetty configuration for the Tutorial.
+Update various Jetty configurations to enable web logging to console.
+
 * Apr 3 2001 hship
 
 Add the 3rd party libraries to CVS.
